--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
 				</section>
 
 				<section>
+					<h2>Structure of branches</h2>
+					<div>
+						<ul>
+							<li><b>master</b> – This should always be a stable branch with write access only by someone who has review responsibilities</li>
+							<li><b>develop</b> – This should be the default working branch</li>
+							<li><b>feature1</b> – Any additional features or individual work should be separated into their own branches (use a descriptive name!)...</li>
+							<li><b>feature2</b> – ...so that all work is easily overviewed and isolated</li>
+						</ul>
+					</div>
+
 					<h2>Work only with a "develop" branch</h2>
 					<p>
 						You can list the current branches in the project with "git branch".
