--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<header>
 					<h1>GitFlow Workshop</h1>
 					<p>
-						Workshop on how to use Git for feature branching and running a project according to the <a href="http://nvie.com/posts/a-successful-git-branching-model/">GitFlow</a> process.
+						Workshop on how to use Git for feature branching and running a project according to the <a href="http://nvie.com/posts/a-successful-git-branching-model/" target="_blank" rel="noopener noreferrer">GitFlow</a> process.
 					</p>
 				</header>
 
@@ -38,31 +38,30 @@
 						Because Git tracks changes in files, rather than <i>actual</i> files, <u>you don't (usually) need multiple sets of the project files</u>. However, what you need to do is make sure you work in the correct branch, so changes don't carry over straight away into another branch, like the develop or master branch.
 					</p>
 
-					<h3>Prerequisites</h3>
-					<p>
-						You should have a working understanding of how Git operates. You should also be practically able to add (stage), commit, merge, pull, fetch and push to a centralized Git repository before attempting this workshop.
-					</p>
-
 					<aside>
 						<h3>Pre-reading</h3>
 						<ul class="ul--inline">
-							<li><a href="https://www.atlassian.com/git/tutorials/using-branches">Atlassian: Using Branches</a></li>
-							<li><a href="https://www.atlassian.com/git/tutorials/comparing-workflows#gitflow-workflow">Atlassian: Comparing Workflows – Gitflow Workflow</a></li>
+							<li><a href="https://www.atlassian.com/git/tutorials/using-branches" target="_blank" rel="noopener noreferrer">Atlassian: Using Branches</a></li>
+							<li><a href="https://www.atlassian.com/git/tutorials/comparing-workflows#gitflow-workflow" target="_blank" rel="noopener noreferrer">Atlassian: Comparing Workflows – Gitflow Workflow</a></li>
 						</ul>
 					</aside>
 				</section>
 
+				<h1>Preparations</h1>
+				<h2>What to do before starting</h2>
+
 				<section>
-					<h3>Setup</h3>
+					<h2>Prerequisites</h2>
 					<p>
 						This workshop assumes that the following criteria is met.
 					</p>
 
 					<aside>
 						<ul>
-							<li>Use a command line interface with Git access; GitHub; Bitbucket; or Visual Studio 2015 (or later) with a Team Services account</li>
-							<li>Clone this repository to your computer</li>
-							<li>asdf</li>
+							<li>You should have a working understanding of how Git operates</li>
+							<li>You have sufficient skills to do basic Git tasks such as add (stage), commit, merge, pull, fetch and push to a remote Git repository</li>
+							<li>You have cloned this repository to your computer and have local access to all of its files</li>
+							<li>You have set this repository up with either a <a href="https://git-scm.com/book/it/v2/Git-Basics-Getting-a-Git-Repository" target="_blank" rel="noopener noreferrer">command line interface (CLI) with Git access</a>, <a href="https://confluence.atlassian.com/bitbucket/clone-a-repository-223217891.html" target="_blank" rel="noopener noreferrer">Bitbucket</a>, <a href="https://help.github.com/articles/cloning-a-repository/" target="_blank" rel="noopener noreferrer">Github</a>, or <a href="https://www.visualstudio.com/en-us/docs/git/gitquickstart" target="_blank" rel="noopener noreferrer">Visual Studio 2015 (or later) with a Team Services account</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -73,13 +72,22 @@
 						Much of what is going to happen in this workshop will be familiar to you. Below I've provided a list of the general commands and steps you will learn.
 					</p>
 
+					<div class="inform">
+						<h3>Don't use $ in your CLI</h3>
+						<p>
+							Please note that the dollar sign ($) always denotes the command line. Don't copy it into your CLI – use the rest of the text.
+						</p>
+					</div>
+
 					<aside>
 						<ul>
-							<li><code>git branch [some-branch]</code>Creates a new branch with the specified name</li>
-							<li><code>git branch -d [some-branch]</code>Deletes the branch with the specified name</li>
-							<li><code>git checkout [some-branch]</code>Switches to the branch with the specified name</li>
-							<li><code>git checkout -b [newbranch] [oldbranch]</code>Creates a new branch with the specified name (if it doesn't already exist) from a previous branch and switches to the new branch (example usage: "git checkout -b myfeature develop")</li>
-							<li><code>git merge [mergefrom]</code>Merge the specified branch onto the current branch (example usage: "git merge develop")</li>
+							<li><code>$ git branch [some-branch]</code>Creates a new branch with the specified name</li>
+							<li><code>$ git branch -d [some-branch]</code>Deletes the branch with the specified name</li>
+							<li><code>$ git checkout [some-branch]</code>Switches to the branch with the specified name</li>
+							<li><code>$ git checkout -b [newbranch] [oldbranch]</code><u>Creates a new branch</u> with the specified name (if it doesn't already exist) <u>from a previous branch</u> and <u>switches to the new branch</u><br>
+								<b>Example usage</b>: <code>$ git checkout -b myfeature develop</code></li>
+							<li><code>$ git merge [mergefrom]</code>Merge the specified branch onto the current branch<br>
+								<b>Example usage</b>: <code>$ git merge develop</code>, meaning that if you are on <code>master</code>, then all the edits in <code>develop</code> will be added on top of your <code>master</code></li>
 						</ul>
 					</aside>
 				</section>
@@ -94,32 +102,29 @@
 						<ul>
 							<li><b>master</b>: This should always be a stable branch with write access only by someone who has review responsibilities</li>
 							<li><b>develop</b>: This should be the default working branch</li>
-							<li><b>feature1</b>: Any additional features or individual work should be separated into their own branches (use a descriptive name, such as "animated-menu-items")...</li>
-							<li><b>feature2</b>: ...so that all work is easily overviewed and isolated</li>
+							<li><b>feature</b>: Any additional features or individual work should be separated into their own branches (use a descriptive name, such as "animated-menu-items") so that all work is easily overviewed and isolated; these should be branched from <code>develop</code></li>
+							<li><b>hotfix</b>: Any urgent fixes that need to be stable should always be branched out from the <code>master</code></li>
+							<li><b>release</b>: All stable releases go into their own separate release versions, like 0.1 or 1.0 or 2.4.1 etc.</li>
 						</ul>
 					</aside>
 				</section>
 
-				<section>
-					<h2><i>Detached HEAD</i></h2>
-					<p>
-						Someday you might encounter a warning about the branch you are working on having a detached HEAD. [...]
-					</p>
-				</section>
+				<h1>Task 1</h1>
+				<h2>Feature branch to fix styling</h2>
 
 				<section>
-					<h2><span class="number">1.</span> Add a new feature branch</h2>
+					<h2><span>1.</span> Add a new feature branch</h2>
 					<p>
-						Only push to the "develop" branch and your own feature branch! You can list the current branches in the project with <code>git branch</code>.
+						Only push to the "develop" branch and your own feature branch! You can list the current branches in the project with <code>$ git branch</code>.
 					</p>
 
 					<p>
-						Switch to the development branch by running <code>git checkout develop</code>. You should now be on that specific branch, meaning all edits will be done only to that branch.
+						Switch to the development branch by running <code>$ git checkout develop</code>. You should now be on that specific branch, meaning all edits will be done only to that branch.
 					</p>
 
 					<h3>CLI</h3>
 					<p>
-						Add it by entering <code>git branch feature1 develop</code> into the CLI, and then switching to it with <code>git checkout feature1</code>. Switching to the master branch and listing changes with <code>git status</code> reveals that the master branch has no registered changes – all in good order!
+						Add it by entering <code>$ git branch feature1 develop</code> into the CLI, and then switching to it with <code>$ git checkout feature1</code>. Switching to the <code>master</code> branch and listing changes with <code>$ git status</code> reveals that the <code>master</code> branch has no registered changes – all in good order!
 					</p>
 
 					<h3>GitHub</h3>
@@ -139,18 +144,18 @@
 				</section>
 
 				<section>
-					<h2><span class="number">2?</span> Add a new hotfix branch</h2>
+					<h2><span>2?</span> Add a new hotfix branch</h2>
 					<p>
 						Oftentimes, you will have to create a hotfix which may come as an abrupt surprise to your workday. Fear not! By creating a hotfix branch, we will attempt to quickly fix whatever is broken and base it entirely on stable master branch code.
 					</p>
 
 					<p>
-						Switch to the development branch by running <code>git checkout develop</code>. You should now be on that specific branch, meaning all edits will be done only to that branch.
+						Switch to the development branch by running <code>$ git checkout develop</code>. You should now be on that specific branch, meaning all edits will be done only to that branch.
 					</p>
 
 					<h3>CLI</h3>
 					<p>
-						Add it by entering <code>git branch feature1 develop</code> into the CLI, and then switching to it with <code>git checkout feature1</code>. Switching to the master branch and listing changes with <code>git status</code> reveals that the master branch has no registered changes – all in good order!
+						Add it by entering <code>$ git branch feature1 develop</code> into the CLI, and then switching to it with <code>$ git checkout feature1</code>. Switching to the master branch and listing changes with <code>$ git status</code> reveals that the master branch has no registered changes – all in good order!
 					</p>
 
 					<h3>GitHub</h3>
@@ -170,7 +175,7 @@
 				</section>
 
 				<section>
-					<h2><span class="number">2.</span> Create pull request</h2>
+					<h2><span>2.</span> Create pull request</h2>
 					<h3>Only available via GUI</h3>
 					<p>
 						The <i>pull request</i> is used as a way to communicate that changes have taken place and that you wish these to be reviewed and added to the main branch (develop or master). A pull request should always contain a pertinent, meaningful description.
@@ -188,11 +193,11 @@
 
 					<h3>Visual Studio 2015</h3>
 					<p>
-						<a href="https://www.visualstudio.com/en-us/docs/git/tutorial/pullrequest">More about pull requests</a> for VS2015, or <a href="https://www.visualstudio.com/en-us/docs/git/pull-requests">read this</a> for some overview.
+						<a href="https://www.visualstudio.com/en-us/docs/git/tutorial/pullrequest" target="_blank" rel="noopener noreferrer">More about pull requests</a> for VS2015, or <a href="https://www.visualstudio.com/en-us/docs/git/pull-requests" target="_blank" rel="noopener noreferrer">read this</a> for some overview.
 					</p>
 
 					<p>
-						Creating a pull request in VS2015 requires that you are <a href="https://www.visualstudio.com/en-us/docs/setup-admin/team-services/connect-to-visual-studio-team-services#vs">connected to Team Services</a>. When you have pushed a commit, you will see an update panel in the "Code" section of the TFS/VS web site - click on "Create a pull request".
+						Creating a pull request in VS2015 requires that you are <a href="https://www.visualstudio.com/en-us/docs/setup-admin/team-services/connect-to-visual-studio-team-services#vs" target="_blank" rel="noopener noreferrer">connected to Team Services</a>. When you have pushed a commit, you will see an update panel in the "Code" section of the TFS/VS web site - click on "Create a pull request".
 					</p>
 
 					<img src="img/tfs_pullrequest.png">
@@ -202,15 +207,16 @@
 					</p>
 
 					<aside>
-						<ul>
-							<li><b>GitHub</b>: <a href="https://help.github.com/articles/creating-a-pull-request/">GitHub: Creating a pull request</a></li>
-							<li><b>Bitbucket</b>: <a href="https://www.atlassian.com/git/tutorials/making-a-pull-request">Atlassian: Making a Pull Request</a></li>
+						<h3>Additional reading</h3>
+						<ul class="ul--inline">
+							<li><b>GitHub</b>: <a href="https://help.github.com/articles/creating-a-pull-request/" target="_blank" rel="noopener noreferrer">GitHub: Creating a pull request</a></li>
+							<li><b>Bitbucket</b>: <a href="https://www.atlassian.com/git/tutorials/making-a-pull-request" target="_blank" rel="noopener noreferrer">Atlassian: Making a Pull Request</a></li>
 						</ul>
 					</aside>
 				</section>
 
 				<section>
-					<h2><span class="number">3.</span> Merge a pull request</h2>
+					<h2><span>3.</span> Merge a pull request</h2>
 					<h3>Only available via GUI</h3>
 					<p>
 						The pull request is done in Bitbucket or another GUI. In Bitbucket you will find "Pull requests" on the left-hand side panel, under the "Navigation" heading.
@@ -219,6 +225,13 @@
 					<p>
 						Valid users can "Approve" and "Unapprove" a pull request. The actual merge takes place when the "Merge" button is clicked. Make sure that "Source" and "Destination" are correct.
 					</p>
+
+					<div class="warn">
+						<h3>Detached HEAD</h3>
+						<p>
+							Someday you might encounter a warning about the branch you are working on having a detached HEAD. [...]
+						</p>
+					</div>
 
 					<h3>GitHub</h3>
 					<p>
@@ -241,14 +254,14 @@
 				</section>
 
 				<section>
-					<h2><span class="number">4.</span> Delete local branch</h2>
+					<h2><span>4.</span> Delete local branch</h2>
 					<p>
 						asdf
 					</p>
 
 					<h3>CLI</h3>
 					<p>
-						<code>git branch -d [branch-name]</code>
+						<code>$ git branch -d [branch-name]</code>
 					</p>
 
 					<h3>GitHub</h3>
@@ -268,14 +281,14 @@
 				</section>
 
 				<section>
-					<h2><span class="number">5.</span> Delete remote branch</h2>
+					<h2><span>5.</span> Delete remote branch</h2>
 					<p>
 						asdf
 					</p>
 
 					<h3>CLI</h3>
 					<p>
-						<code>git push origin --delete [branch-name]</code>
+						<code>$ git push origin --delete [branch-name]</code>
 					</p>
 
 					<h3>GitHub</h3>
@@ -286,6 +299,66 @@
 					<h3>Bitbucket</h3>
 					<p>
 						In Bitbucket a branch (sorted by "active" or "merged") can be deleted by going to "Branches" under the "Navigation" panel. To the far right a "..." symbol can be clicked. If you have merged your changes, make sure to get rid of old branches. To do so, click "Delete branch" in the "..." panel.
+					</p>
+
+					<h3>Visual Studio 2015</h3>
+					<p>
+						asdf
+					</p>
+				</section>
+
+				<h1>Task 2</h1>
+				<h2>Hotfix branch for corrections</h2>
+
+				<section>
+					<h2><span>1.</span> Description</h2>
+					<p>
+						asdf
+					</p>
+
+					<h3>CLI</h3>
+					<p>
+						<code>$ git push origin --delete [branch-name]</code>
+					</p>
+
+					<h3>GitHub</h3>
+					<p>
+						asdf
+					</p>
+
+					<h3>Bitbucket</h3>
+					<p>
+						asdf
+					</p>
+
+					<h3>Visual Studio 2015</h3>
+					<p>
+						asdf
+					</p>
+				</section>
+
+				<h1>Task 3</h1>
+				<h2>Release branch for final version</h2>
+
+				<section>
+					<h2><span>1.</span> Description</h2>
+					<p>
+						asdf
+					</p>
+
+					<h3>CLI</h3>
+					<p>
+						<code>$ git push origin --delete [branch-name]</code>
+					</p>
+
+					<h3>GitHub</h3>
+					<p>
+						asdf
+					</p>
+
+					<h3>Bitbucket</h3>
+					<p>
+						asdf
 					</p>
 
 					<h3>Visual Studio 2015</h3>
